# gnome-themes-extra

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README  README.md  configure.ac  gnome-themes-extra.doap  gnome-themes-standard.doap
po/: LINGUAS  POTFILES.in  af.po  an.po  as.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  kk.po  km.po  kn.po  ko.po  ln.po  lt.po  lv.po  (+30 more)
src/: adwaita_engine.c
themes/: Makefile.am  a11y-base.css
themes/Adwaita/: Makefile.am
themes/Adwaita-dark/: Makefile.am  index.theme.in
themes/Adwaita-dark/gtk-2.0/: render-assets-external.sh
themes/Adwaita-dark/gtk-3.0/: Makefile.am
themes/Adwaita/backgrounds/: Makefile.am
themes/Adwaita/gtk-2.0/: Makefile.am  adwaita_engine.c  apps.rc  assets-external.txt  assets.txt  bits-list.txt  default.rc  gtkrc  gtkrc-dark  main.rc  render-assets-external-dark.sh  render-bits.sh
themes/Adwaita/gtk-3.0/: Makefile.am  _colors.scss  _common.scss  _drawing.scss  _spinner.scss  adwaita_engine.c  assets.txt  borders.txt  custom_functions.rb  gnome-applications-dark-overrides.css  gnome-applications.css  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-contained.scss  gtk-dark.css  gtk-dark.scss  gtk-main-common.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-dark.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets.css  gtk.css  gtk.gresource.xml  gtk.scss  parse-sass.sh  render-assets-new.sh  render-borders.sh
themes/Adwaita/gtk-3.0/assets/: Makefile.am
themes/Adwaita/gtk-3.0/borders/: Makefile.am
themes/Adwaita/metacity-1/: metacity-theme-3.xml
themes/Adwaita/shell-watcher/: Makefile.am  adwaita-shell-watcher.desktop
themes/Adwaita/shell-watcher/gtk-2.0/: Makefile.am  shell-watcher-gtk2.c
themes/Adwaita/shell-watcher/gtk-3.0/: Makefile.am  shell-watcher-gtk3.c
themes/HighContrast/: Makefile-icons.am  Makefile.am  create-highcontrast.c  create-makefiles.sh  index.theme.in
themes/HighContrast/gtk-2.0/: Makefile.am
themes/HighContrast/gtk-3.0/: Makefile.am  _colors.scss  _common.scss  _drawing.scss  gtk-widgets.css  gtk.css  gtk.gresource.xml
themes/HighContrast/icons/: Makefile  Makefile.am  Makefile.in  index.theme  index.theme.in
themes/HighContrast/icons/scalable/: Makefile.am
themes/HighContrast/metacity-1/: Makefile.am  metacity-theme-3.xml
